more spacing fixes

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
   text-align: center;
   font-family: 'Rajdhani', sans-serif;
   position: relative;
-  top: 10%;
+  top: .5%;
   left: 0%;
 }
 
@@ -11,8 +11,8 @@
 }
 
 #fact{
-  font-size: 1.2rem;
-  margin-top: 43px;
+  font-size: 1rem;
+  margin-top: 20px;
 }
 
 body{
